--- a/Tensorflow Fundamentals/Untitled.ipynb
+++ b/Tensorflow Fundamentals/Untitled.ipynb
@@ -527,7 +527,9 @@
    "id": "caf3cd80",
    "metadata": {},
    "source": [
-    "Matrix multiplcation"
+    "**Matrix multiplcation**\n",
+    "1. In matrix multiplicaion the inner matrix must be the same \n",
+    "2. The number of columns and row in the results must be the outer size"
    ]
   },
   {
@@ -601,20 +603,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "dc235953",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(3, 2), dtype=float32, numpy=\n",
-       "array([[ 3., 10.],\n",
-       "       [21., 36.],\n",
-       "       [63., 64.]], dtype=float32)>"
+       "(<tf.Tensor: shape=(3, 2), dtype=float32, numpy=\n",
+       " array([[3., 5.],\n",
+       "        [7., 6.],\n",
+       "        [9., 8.]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(3, 2), dtype=float32, numpy=\n",
+       " array([[1., 2.],\n",
+       "        [3., 6.],\n",
+       "        [7., 8.]], dtype=float32)>)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,13 +633,427 @@
     "                 [3,6],\n",
     "                 [7,8]], dtype=tf.float32)\n",
     "\n",
-    "tf.multiply(A1, A2)"
+    "A1,A2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "e3477c8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 2), dtype=float32, numpy=\n",
+       "array([[ 3., 10.],\n",
+       "       [21., 36.],\n",
+       "       [63., 64.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.multiply(A1,A2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c5065e7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 3), dtype=float32, numpy=\n",
+       "array([[1., 2., 3.],\n",
+       "       [6., 7., 8.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.reshape(A2, shape=(2,3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "236ef658",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 3), dtype=float32, numpy=\n",
+       "array([[33., 41., 49.],\n",
+       "       [43., 56., 69.],\n",
+       "       [57., 74., 91.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.matmul(A1, tf.reshape(A2, shape=(2,3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "9560d82e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 3), dtype=float32, numpy=\n",
+       "array([[33., 41., 49.],\n",
+       "       [43., 56., 69.],\n",
+       "       [57., 74., 91.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A1 @ tf.reshape(A2, shape=(2,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "583424d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(3, 2), dtype=float32, numpy=\n",
+       " array([[3., 5.],\n",
+       "        [7., 6.],\n",
+       "        [9., 8.]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(2, 3), dtype=float32, numpy=\n",
+       " array([[1., 3., 7.],\n",
+       "        [2., 6., 8.]], dtype=float32)>)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A1,A2\n",
+    "A1, tf.transpose(A2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f7de973",
+   "metadata": {},
+   "source": [
+    "**The dot Product**\n",
+    "* `tf.matmul`\n",
+    "*  `tf.tensordot()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "e14ebaed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(3, 2), dtype=float32, numpy=\n",
+       " array([[3., 5.],\n",
+       "        [7., 6.],\n",
+       "        [9., 8.]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(3, 2), dtype=float32, numpy=\n",
+       " array([[1., 2.],\n",
+       "        [3., 6.],\n",
+       "        [7., 8.]], dtype=float32)>)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A1,A2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "2a25c490",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2), dtype=float32, numpy=\n",
+       "array([[ 87., 120.],\n",
+       "       [ 79., 110.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.tensordot(tf.transpose(A1), A2,axes=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "d810bab3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 3), dtype=float32, numpy=\n",
+       "array([[ 13.,  39.,  61.],\n",
+       "       [ 19.,  57.,  97.],\n",
+       "       [ 25.,  75., 127.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.matmul(A1, tf.transpose(A2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "22365e8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 3), dtype=float32, numpy=\n",
+       "array([[ 13.,  39.,  61.],\n",
+       "       [ 19.,  57.,  97.],\n",
+       "       [ 25.,  75., 127.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.tensordot(A1, tf.transpose(A2),axes=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "f0ef90d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 3), dtype=float32, numpy=\n",
+       "array([[33., 41., 49.],\n",
+       "       [43., 56., 69.],\n",
+       "       [57., 74., 91.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.matmul(A1, tf.reshape(A2, shape=(2,3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "9ce98b80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 2) (2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A1.shape, tf.transpose(A2).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "f338bec2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2,), dtype=int32, numpy=array([7, 5])>"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = tf.constant([7,5])\n",
+    "B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "3540622c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2,), dtype=int16, numpy=array([7, 5], dtype=int16)>"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = tf.cast(B, dtype='int16')\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "318adff4",
+   "metadata": {},
+   "source": [
+    "**Aggregations in tensor**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "3a464da9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 2), dtype=float32, numpy=\n",
+       "array([[3., 5.],\n",
+       "       [7., 6.],\n",
+       "       [9., 8.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fing the max\n",
+    "A1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "00108d88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(9.0, shape=(), dtype=float32)\n",
+      "tf.Tensor(27.0, shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tf.reduce_max(A1))\n",
+    "print(tf.reduce_sum(A2))\n",
+    "# print(tf.reduce_median(A1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "676b7730",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=1.9720266>"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.math.reduce_std(A1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "50ac8b63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=3.888889>"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.math.reduce_variance(A1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5065e7b",
+   "id": "db008ec9",
    "metadata": {},
    "outputs": [],
    "source": []
