--- a/002_NN_Classification_Tensorflow/002_NN_Fashion_Mnist_Classification.ipynb
+++ b/002_NN_Classification_Tensorflow/002_NN_Fashion_Mnist_Classification.ipynb
@@ -17,7 +17,7 @@
     "import tensorflow as tf\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
