Starting CNN and Computer Vision

--- a/002_NN_Classification_Tensorflow/002_NN_Fashion_Mnist_Classification.ipynb
+++ b/002_NN_Classification_Tensorflow/002_NN_Fashion_Mnist_Classification.ipynb
@@ -50,7 +50,8 @@
     "def plot_data(index_choice):\n",
     "    plt.imshow(train_data[index_choice], cmap=plt.cm.binary)\n",
     "    plt.title(class_names[train_label[index_choice]])\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    "
    ]
   },
   {
