complete multitclass CNN

--- a/003_NN_CNN_Comp_Vision_Tensorflow/Steak_pizza_with_data_augmentation.ipynb
+++ b/003_NN_CNN_Comp_Vision_Tensorflow/Steak_pizza_with_data_augmentation.ipynb
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,8 +411,8 @@
     "    epoch = range(10)\n",
     "\n",
     "    plt.figure()\n",
-    "    plt.plot(epoch, val_loss, label='loss')\n",
-    "    plt.plot(epoch, loss, label='val-loss')\n",
+    "    plt.plot(epoch, val_loss, label='val-loss')\n",
+    "    plt.plot(epoch, loss, label='loss')\n",
     "    plt.title('loss-curve')\n",
     "    plt.ylabel('loss')\n",
     "    plt.xlabel('epochs')\n",
@@ -420,7 +420,7 @@
     "    plt.show()\n",
     "\n",
     "    plt.figure()\n",
-    "    plt.plot(epoch, val_accuracy, label='accuracy')\n",
+    "    plt.plot(epoch, val_accuracy, label='val-accuracy')\n",
     "    plt.plot(epoch, accuracy, label='accuracy')\n",
     "    plt.title('Accuracy')\n",
     "    plt.ylabel('loss')\n",
